gcc/testsuite/gdc.test/compilable/test11225a.d
/*
EXTRA_FILES: imports/test11225b.d imports/test11225c.d
TEST_OUTPUT:
---
WORKS
---
*/

import imports.test11225b;
interface I {}
